[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Jordan Miracle <jordanmiracle@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^6.2.5"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
